fix: contrast of text color

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -12,6 +12,10 @@ html {
   color: $COLOR_BLACK;
 }
 
+body {
+  background: $COLOR_WHITE;
+}
+
 a {
   color: $COLOR_BLUE;
   text-decoration: none;
